// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform nested 1`] = `
Object {
  "code": "import * as sdk from 'https://cdn.jsdelivr.net/npm/@plaidev/karte-action-sdk@1.0.7';

console.log(sdk);
",
  "dynamicImports": Array [],
  "exports": Array [],
  "facadeModuleId": "/index.tsx",
  "fileName": "index.js",
  "implicitlyLoadedBefore": Array [],
  "importedBindings": Object {
    "https://cdn.jsdelivr.net/npm/@plaidev/karte-action-sdk@1.0.7": Array [
      "*",
    ],
  },
  "imports": Array [
    "https://cdn.jsdelivr.net/npm/@plaidev/karte-action-sdk@1.0.7",
  ],
  "isDynamicEntry": false,
  "isEntry": true,
  "isImplicitEntry": false,
  "map": null,
  "modules": Object {
    "/index.tsx": Object {
      "originalLength": 104,
      "removedExports": Array [],
      "renderedExports": Array [],
      "renderedLength": 17,
    },
  },
  "name": "index",
  "referencedFiles": Array [],
  "type": "chunk",
}
`;

exports[`transform preact 1`] = `
Object {
  "code": "import { h } from 'https://esm.sh/preact';

console.log(h('div'));
",
  "dynamicImports": Array [],
  "exports": Array [],
  "facadeModuleId": "/index.tsx",
  "fileName": "index.js",
  "implicitlyLoadedBefore": Array [],
  "importedBindings": Object {
    "https://esm.sh/preact": Array [
      "h",
    ],
  },
  "imports": Array [
    "https://esm.sh/preact",
  ],
  "isDynamicEntry": false,
  "isEntry": true,
  "isImplicitEntry": false,
  "map": null,
  "modules": Object {
    "/index.tsx": Object {
      "originalLength": 50,
      "removedExports": Array [],
      "renderedExports": Array [],
      "renderedLength": 22,
    },
  },
  "name": "index",
  "referencedFiles": Array [],
  "type": "chunk",
}
`;
